--- a/app/templates/shipment/all.html
+++ b/app/templates/shipment/all.html
@@ -10,6 +10,8 @@
     {% endif %}
     <section class="profile">
         {% include 'sidebar.html' %}
+
+        {% if shipments|length != 0 %}
         <table class="profile__table" style="margin-top: 3%; margin-bottom: 3%; margin-left: 1%;">
             <tr class = "tbhead">
                 <th>ID</th>
@@ -80,6 +82,7 @@
             </td>
             {% endfor %}
         </table>
+        {% endif %}
         
 
     </section>
