--- a/app/templates/shipment/tracking.html
+++ b/app/templates/shipment/tracking.html
@@ -6,6 +6,7 @@
     <section class="profile">
         {% include 'sidebar.html' %}
         
+        {% if shipments|length != 0 %}
         <table class="profile__table" style="margin-top: 3%; margin-bottom: 3%; margin-left: 1%;">
             <tr class = "tbhead">
                 <th>ID</th>
@@ -43,6 +44,7 @@
             </td>
             {% endfor %}
         </table>
+        {% endif %}
         
 
     </section>
