--- a/app/templates/sidebar.html
+++ b/app/templates/sidebar.html
@@ -7,5 +7,7 @@
     {% if current_user.has_role(Role.EMPLOYEE) %}
         <a href="{{url_for('office.show')}}">Offices</a>
     {% endif %}
-    <!-- <a href="#">Settings</a> -->
+    {% if current_user.has_role(Role.ADMIN) %}
+        <a href="{{ url_for('download_report') }}">Reports</a>
+    {% endif %}
 </div>
