--- a/app/templates/employee/all.html
+++ b/app/templates/employee/all.html
@@ -4,9 +4,11 @@
 
 {% block content %}
 
+    {% if current_user.has_role(Role.ADMIN) %}
     <div style="margin-left: 43.5%">
         <a href="{{ url_for('employee.create') }}" class="btn btn-primary">Add Employee</a>
     </div>
+    {% endif %}
     <section class="profile">
         {% include 'sidebar.html' %}
 
@@ -34,7 +36,7 @@
                         <a href="{{ url_for('employee.update', id=employee.id) }}" class ="addButton">Update</a>
                     </td>
                 {% endif %}
-                {% if not employee.user.has_role(Role.ROOT) %}
+                {% if not employee.user.has_role(Role.ROOT) and not current_user == employee.user %}
                     <td>
                         <a href="{{ url_for('employee.delete', id=employee.id) }}" class ="removeButton">Remove</a>
                     </td>
